@@ -1,5 +1,6 @@
 2010-06-08  Steffen Kamper  <info@sk-typo3.de>
 
+	* Fixed bug #14555: early thrown debug messages are not visible (BE only) (Thanks to Stefan Galinski)
 	* Fixed bug #14628: Open t3lib_db for own instance
 	* Follow-up to bug #8305: SQL debug output is not shown in the Backend
 	* Fixed bug #14618: Bug: Add debug feature to Ext Direct (Thanks to Fabien Udriot)
